--- a/students/templates/students/registration.html
+++ b/students/templates/students/registration.html
@@ -6,30 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body>
+<body class=".container">
     <form action="{%url 'students:reg'%}" method="post">
         {% csrf_token %}
         <fieldset>
-            <legend><h1>РЕГИСТРАЦИЯ</h1></legend>
-            <input type="text"  id="s" placeholder="Фамилия"">
-            <input type="text"  id="n" placeholder="Имя"">
-            <input type="text"  id="p" placeholder="Отчество"">
-            <input type="date"  id="date"">
-            <select>
+            <legend>
+                <h1>РЕГИСТРАЦИЯ</h1>
+            </legend>
+            <input type="text" name="s" placeholder="Фамилия">
+            <input type="text" name="n" placeholder="Имя">
+            <input type="text" name="p" placeholder="Отчество">
+            <input type="date" name="date">
+            <select name="g">
                 {%for group in groups%}
                 <option>{{group.name}}</option>
                 {% endfor %}
             </select>
-            <select>
+            <select name="r">
                 {%for role in roles%}
                 <option>{{role.name}}</option>
                 {% endfor %}
             </select>
         </fieldset>
         <input type="submit" value="Зарегистрироваться">
-        </form>
+    </form>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
